# my2DGameEngine

./: CMakeLists.txt
res/shaders/: fragment2D.fshader  shader.fshader  vertex.vshader  vertex2D.vshader
src/: main.cpp
src/Render/: Sprite2D.cpp  Sprite2D.h  Texture2D.cpp  Texture2D.h
src/render/: ShaderProgram.cpp  ShaderProgram.h  Texture2D.cpp  Texture2D.h  shaderProgram.cpp  shaderProgram.h
src/render/shaders/: shader.vshader
src/resources/: ResourceManager.cpp  ResourceManager.h
